--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,7 @@
     <nav>
         <a href="{{ url_for('index') }}">Главная</a>
         <a href="{{ url_for('all_posts') }}">Все посты</a>
+        <a href="{{ url_for('all_categories') }}">Категории</a>
     </nav>
     <div class="content">
         {% block content %}{% endblock %}
