--- a/templates/posts.html
+++ b/templates/posts.html
@@ -8,7 +8,7 @@
         <div class="post">
             <h2>{{ post.title }}</h2>
             <p>{{ post.content[:100] }}...</p>
-            <a href="{{ url_for('show_post', post_id=post.id) }}">Читать далее</a>
+            <a href="{{ url_for('show_post', post_id=post.id) }}" class="button">Читать далее</a>
         </div>
     {% endfor %}
 {% endblock %}
